# AnimaLite

./: .gitignore  CMakeLists.txt  README.md
Anima/: Anima.h  MainLoop.cpp  MainLoop.h  Plugin.cpp  Plugin.h  PluginGroup.cpp  PluginGroup.h  PluginManager.cpp  PluginManager.h  PluginOptions.h  PluginRoot.cpp  PluginRoot.h
Anima/AI/: FsmMachine.cpp  FsmMachine.h  FsmState.h
Anima/Animation/: Animation.h  AnimationManager.h  Easing.h  Range.h
Anima/Audio/: AudioBuffer.h  AudioLoaderManager.h  AudioManager.h  AudioPlayerManager.h  AudioSpatialManager.h  AudioStream.h  Music.h  Sound.h
Anima/Ecs/: Component.h  EcsManager.h  Entity.h  System.h
Anima/Graphics/: ColorBuffer.h  ColorBufferDesc.h  Enums.h  Image.h  Manager.h  Surface.h
Anima/Graphics/Device/: Context.h  ContextDesc.h  Driver.h  FragmentShader.h  IndexBuffer.h  Manager.h  Pipeline.cpp  Pipeline.h  PixelBuffer.h  Shader.h  Texture.h  VertexBuffer.h  VertexShader.h
Anima/Graphics/Image/: Image.h  ImageDesc.h  ImageManager.h
Anima/Input/: Device.h  Enums.h  InputManagerDesc.h  Joystick.h  KeyInfo.h  Keyboard.h  Manager.h  Mouse.h
Anima/Math/: Matrix3.h  Transform2.h  Vector2.h  Vector3.h
Anima/OS/: Event.h  EventListener.h  EventManager.h  EventQueue.cpp  EventQueue.h  JoystickListener.h  KeyListener.h  MouseListener.h  Timer.h  Window.cpp  Window.h  WindowDesc.h  WindowListener.h  WindowManager.cpp  WindowManager.h
Engine/: Types.h
Engine/Graphics/Device/: Context.h
Engine/Input/: Enums.h  KeyInfo.h
Engine/Math/: Point2.h
Games/PongPrototype/: Game.cpp  Game.h  GameController.cpp  GameController.h  GameModel.cpp  GameModel.h  GameView.cpp  GameView.h
Plugins/Animation/Choreograph/: AnimationChoreograph.h  AnimationManagerChoreograph.h  EasingChoreograph.h  RangeChoreograph.h
Plugins/Audio/Sfml/: AudioManagerSfml.h  MusicSfml.h  SoundSfml.h
Plugins/Ecs/Anax/: Component.h  ComponentAnax.h  EcsManagerAnax.cpp  EcsManagerAnax.h  EntityAnax.h  System.h
Plugins/Graphics/Device/Allegro/: ColorBufferAllegro.cpp  ColorBufferAllegro.h  ContextAllegro.cpp  ContextAllegro.h  DriverAllegro.cpp  DriverAllegro.h  ManagerAllegro.cpp  ManagerAllegro.h
Plugins/Graphics/Device/Sdl/: ContextSdl.cpp  ContextSdl.h  DriverSdl.cpp  DriverSdl.h  ManagerSdl.cpp  ManagerSdl.h
Plugins/Graphics/Device/Sfml/: ContextSfml.cpp  ContextSfml.h  DriverSfml.cpp  DriverSfml.h  FrameBufferSfml.cpp  FrameBufferSfml.h  ManagerSfml.cpp  ManagerSfml.h  PipelineSfml.cpp  PipelineSfml.h  ShaderSfml.cpp  ShaderSfml.h  TextureSfml.cpp  TextureSfml.h
Plugins/Graphics/Image/Sfml/: ImageManagerSfml.cpp  ImageManagerSfml.h  ImageSfml.cpp  ImageSfml.h  ManagerSfml.cpp  ManagerSfml.h
Plugins/Graphics/Sfml/: ImageSfml.cpp  ImageSfml.h
Plugins/Input/Sdl/: DeviceSdl.h  EnumsSdl.h  InputManagerSdlDesc.h  JoystickManagerSdl.h  JoystickSdl.h  KeyInfoSdl.cpp  KeyInfoSdl.h  KeyValueSdl.h  KeyboardSdl.h  ManagerSdl.h  MouseSdl.h
Plugins/Math/MathMathfu/: Matrix3.h  Transform2.h  Vector2.h  Vector3.h
Plugins/OS/EventSdl/: EventManagerSdl.cpp  EventManagerSdl.h  EventQueueSdl.cpp  EventQueueSdl.h
Plugins/OS/TimerSdl/: TimerSdl.h
Plugins/OS/WindowSdl/: EventQueueSdl.cpp  EventQueueSdl.h  WindowManagerSdl.cpp  WindowManagerSdl.h  WindowSdl.cpp  WindowSdl.h
Tests/Ch02-Event/: Ch02-Event.cpp  Ch02-Event.h
Tests/Ch02-Window/: Ch02-Window.cpp
Tests/Ch03-Rendering/: Ch03-Rendering.cpp  Ch03-Rendering.h
Tests/Ch04-Input/: Ch04-Input.cpp  Ch04-Input.h
Tests/Ch05-Entity-Component/: Ch05-Entity-Component.cpp  Ch05-Entity-Component.h
Tests/Graphics/DeviceAllegro/: TestGraphicsDeviceAllegro.cpp  TestGraphicsDeviceAllegro.h
Tests/OS/EventSdl/: TestEventSdl.cpp  TestEventSdl.h
Tests/OS/WindowSdl/: TestWindowSdl.cpp  TestWindowSdl.h
Tests/OS/WindowWxWidgets/: TestWindowWxWidgets.cpp  TestWindowWxWidgets.h
Tests/Physics/Box2D/: TestPhysicsBox2D.cpp  TestPhysicsBox2D.h
